1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (jar): New target, depend on modules and
	$(POSTCLASSFIELS).
	(all): Depend on it.
	(JAR, JAR_HOME): Substitute.

1999-04-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (modules): New target.
	(PRECLASSES, POSTCLASSES): Split CLASSES into two parts (before
	and after compilation of modules).
	Run deps pass before compilation.

	* Makefile.rules.in (all): Use JavaDeps to create compilation rules
	and dependencies.
	(JAVACOMPILE): Set to be JAVAC + classpath directive.

	* Makefile.in (CLASSES): Remove GlobalZone.

1999-03-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in, Makefile.in (JAVACLASSES): Substitute.

	* Makefile.in (%.class): Use it.

	* Makefile.rules.in ($(CLASSFILES)): Use it.

1999-03-31  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: Remove globalZone, uniformIntRand, 
	uniformDblRand from arguments list in initSwarm method.
	Type globalZone field as ZoneU instead of GlobalZone.

1999-03-24  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: Facilitate uniformDblRand field and directory
	initialization.

	* Makefile.in (%.class): Add ../ to classpath so that SwarmEnvironment
	could import swarm.random.*

1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.java: Add globalZone argument to initSwarm.

1999-03-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in, Makefile.rules.in (CLASSPHASES): Use U and S
	instead of _u and _s.

	* SwarmEnvironment.java: Add globalZone instance variable.  Initialize
	it in the constructor.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (GENINTERFACEFILES): New variable.
	(all): Use it. 
	(GENCLASSFILES, GENINTERFACEFILES): Do phase expansion.

	* GlobalZone.java: Make public.

	* Selector.java: Add objcFlag.  This flag determines whether